# libguri

./: CMakeLists.txt  README  test-uri-parse.c  uri-parse-speed.c  uri_grammar.rl  uri_parser.h  uri_parser.rl
